[gd_scene load_steps=26 format=2]

[ext_resource path="res://fonts/Hokjesgeest-PDGB.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/FlopDesignFONT.otf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/arial.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://images/folder_white.png" type="Texture" id=4]
[ext_resource path="res://images/event_available_white.png" type="Texture" id=5]
[ext_resource path="res://images/arrow_forward_white.png" type="Texture" id=6]
[ext_resource path="res://images/gold_medal.png" type="Texture" id=7]
[ext_resource path="res://scripts/TopScene.gd" type="Script" id=8]
[ext_resource path="res://images/translate_black.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=14]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.180392, 0.309804, 0.309804, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.180392, 0.309804, 0.309804, 1 )

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=10]

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.180392, 0.309804, 0.309804, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 1, 0, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 8
shadow_offset = Vector2( 4, 4 )

[sub_resource type="DynamicFont" id=18]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 2 )

[node name="TopScene" type="Node2D"]
script = ExtResource( 8 )

[node name="BG" type="ColorRect" parent="."]
margin_right = 500.0
margin_bottom = 900.0
rect_pivot_offset = Vector2( 176, 822 )
color = Color( 0.501961, 0.752941, 0.501961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LangTextureRect" type="TextureRect" parent="."]
margin_left = 107.0
margin_top = 10.0
margin_right = 147.0
margin_bottom = 50.0
texture = ExtResource( 9 )

[node name="JaButton" type="Button" parent="LangTextureRect"]
margin_left = 60.0
margin_right = 139.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_fonts/font = SubResource( 14 )
custom_styles/pressed = SubResource( 16 )
toggle_mode = true
text = "日本語"

[node name="EnButton" type="Button" parent="LangTextureRect"]
margin_left = 150.0
margin_right = 229.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
custom_fonts/font = SubResource( 14 )
custom_styles/pressed = SubResource( 17 )
toggle_mode = true
text = "English"

[node name="LangRect" type="ColorRect" parent="."]
visible = false
margin_right = 150.0
margin_bottom = 40.0
color = Color( 0.627451, 0.627451, 0.627451, 1 )

[node name="OptionButton" type="OptionButton" parent="LangRect"]
margin_left = 40.0
margin_right = 150.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 15 )

[node name="TitleLabel" type="Label" parent="."]
margin_top = 60.0
margin_right = 500.0
margin_bottom = 149.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 1 )
text = "SakuSaku
NumberPlace"
align = 1

[node name="VersionLabel" type="Label" parent="."]
margin_top = 160.0
margin_right = 500.0
margin_bottom = 181.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "version 0.102"
align = 1

[node name="SeedLabel" type="Label" parent="."]
margin_left = 24.0
margin_top = 205.0
margin_right = 222.0
margin_bottom = 230.0
rect_rotation = -0.0329332
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "問題名（空欄可）:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 241.0
margin_top = 200.0
margin_right = 480.0
margin_bottom = 235.0
theme = SubResource( 10 )
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button0" type="Button" parent="."]
margin_left = 23.0
margin_top = 250.0
margin_right = 479.0
margin_bottom = 304.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 6 )

[node name="Label" type="Label" parent="Button0"]
margin_left = 56.0
margin_right = 252.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 18 )
text = "入門問題を生成"
valign = 1

[node name="NSolvedLabel" type="Label" parent="Button0"]
margin_left = 333.0
margin_top = 5.0
margin_right = 434.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 9 )
text = "クリア数: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AveTimeLabel" type="Label" parent="Button0"]
margin_left = 333.0
margin_top = 20.0
margin_right = 445.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 9 )
text = "平均タイム: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestTimeLabel" type="Label" parent="Button0"]
margin_left = 333.0
margin_top = 35.0
margin_right = 445.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 9 )
text = "最短タイム: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" type="Button" parent="."]
margin_left = 23.0
margin_top = 330.0
margin_right = 479.0
margin_bottom = 384.0
rect_pivot_offset = Vector2( 321, 294 )
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 6 )

[node name="Label" type="Label" parent="Button1"]
margin_left = 56.0
margin_right = 252.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 18 )
text = "入門問題を生成"
valign = 1

[node name="NSolvedLabel" type="Label" parent="Button1"]
margin_left = 333.0
margin_top = 5.0
margin_right = 434.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 9 )
text = "クリア数: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AveTimeLabel" type="Label" parent="Button1"]
margin_left = 333.0
margin_top = 20.0
margin_right = 445.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 9 )
text = "平均タイム: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestTimeLabel" type="Label" parent="Button1"]
margin_left = 333.0
margin_top = 35.0
margin_right = 445.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 9 )
text = "最短タイム: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 23.0
margin_top = 410.0
margin_right = 479.0
margin_bottom = 464.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 6 )

[node name="Label" type="Label" parent="Button2"]
margin_left = 56.0
margin_right = 252.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 18 )
text = "入門問題を生成"
valign = 1

[node name="NSolvedLabel" type="Label" parent="Button2"]
margin_left = 333.0
margin_top = 5.0
margin_right = 434.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 9 )
text = "クリア数: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AveTimeLabel" type="Label" parent="Button2"]
margin_left = 333.0
margin_top = 20.0
margin_right = 445.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 9 )
text = "平均タイム: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestTimeLabel" type="Label" parent="Button2"]
margin_left = 333.0
margin_top = 35.0
margin_right = 445.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 9 )
text = "最短タイム: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 23.0
margin_top = 490.0
margin_right = 479.0
margin_bottom = 544.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 4 )

[node name="Label" type="Label" parent="Button3"]
margin_left = 56.0
margin_right = 252.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 18 )
text = "入門問題を生成"
valign = 1

[node name="NSolvedLabel" type="Label" parent="Button3"]
margin_left = 333.0
margin_top = 5.0
margin_right = 434.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 9 )
text = "クリア数: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AveTimeLabel" type="Label" parent="Button3"]
margin_left = 333.0
margin_top = 20.0
margin_right = 445.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 9 )
text = "平均タイム: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestTimeLabel" type="Label" parent="Button3"]
margin_left = 333.0
margin_top = 35.0
margin_right = 445.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 9 )
text = "最短タイム: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
margin_left = 23.0
margin_top = 570.0
margin_right = 479.0
margin_bottom = 624.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button4"]
margin_left = 56.0
margin_right = 252.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 18 )
text = "入門問題を生成"
valign = 1

[node name="NSolvedLabel" type="Label" parent="Button4"]
margin_left = 333.0
margin_top = 5.0
margin_right = 434.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 9 )
text = "クリア数: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AveTimeLabel" type="Label" parent="Button4"]
margin_left = 333.0
margin_top = 20.0
margin_right = 445.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 9 )
text = "平均タイム: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestTimeLabel" type="Label" parent="Button4"]
margin_left = 333.0
margin_top = 35.0
margin_right = 445.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 9 )
text = "最短タイム: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="."]
margin_left = 23.0
margin_top = 650.0
margin_right = 479.0
margin_bottom = 704.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 4 )

[node name="Label" type="Label" parent="Button5"]
margin_left = 56.0
margin_right = 252.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 18 )
text = "入門問題を生成"
valign = 1

[node name="NSolvedLabel" type="Label" parent="Button5"]
margin_left = 333.0
margin_top = 5.0
margin_right = 434.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 9 )
text = "クリア数: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AveTimeLabel" type="Label" parent="Button5"]
margin_left = 333.0
margin_top = 20.0
margin_right = 445.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 9 )
text = "平均タイム: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestTimeLabel" type="Label" parent="Button5"]
margin_left = 333.0
margin_top = 35.0
margin_right = 445.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 9 )
text = "最短タイム: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="."]
margin_left = 23.0
margin_top = 730.0
margin_right = 479.0
margin_bottom = 784.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 5 )

[node name="Label" type="Label" parent="Button6"]
margin_left = 56.0
margin_right = 252.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 18 )
text = "入門問題を生成"
valign = 1

[node name="NSolvedLabel" type="Label" parent="Button6"]
visible = false
margin_left = 333.0
margin_top = 5.0
margin_right = 434.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 9 )
text = "クリア数: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AveTimeLabel" type="Label" parent="Button6"]
visible = false
margin_left = 333.0
margin_top = 20.0
margin_right = 445.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 9 )
text = "平均タイム: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestTimeLabel" type="Label" parent="Button6"]
visible = false
margin_left = 333.0
margin_top = 35.0
margin_right = 445.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 9 )
text = "最短タイム: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinButton" type="TextureButton" parent="."]
margin_left = 23.0
margin_top = 810.0
margin_right = 71.0
margin_bottom = 858.0
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CoinButton"]
margin_left = -8.0
margin_top = 53.0
margin_right = 56.0
margin_bottom = 72.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "コイン"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NCoinLabel" type="Label" parent="CoinButton"]
margin_right = 48.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinLabel" type="Label" parent="."]
margin_left = 95.0
margin_top = 826.0
margin_right = 499.0
margin_bottom = 847.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
text = "※ 毎日アプリを開くと、コインが２個増えます。"

[connection signal="toggled" from="LangTextureRect/JaButton" to="." method="_on_JaButton_toggled"]
[connection signal="toggled" from="LangTextureRect/EnButton" to="." method="_on_EnButton_toggled"]
[connection signal="pressed" from="Button0" to="." method="_on_Button0_pressed"]
[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
